--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
 <div id="sections">
     <div class="row">
         <div class="card col-sm-12 col-md-4 col-lg-4" >
-            <a href=""><img class="card-img-top" src="/hobby/images/hangul.jpg" ></a>
+            <a href=""><img class="card-img-top" src="/images/hangul.jpg" ></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
 
           <div class="card col-sm-12 col-md-4 col-lg-4" >
-            <a href=""><img class="card-img-top" src="/hobby/images/words.jpg" ></a>
+            <a href=""><img class="card-img-top" src="/images/words.jpg" ></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
 
           <div class="card col-sm-12 col-md-4 col-lg-4" >
-            <a href=""><img class="card-img-top" src="/hobby/images/speaking.jpg" ></a>
+            <a href=""><img class="card-img-top" src="/images/speaking.jpg" ></a>
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
