--- a/relatedhobbies.html
+++ b/relatedhobbies.html
@@ -52,6 +52,16 @@
             </div>
           </nav>
 <!--Nav End-->
+<!--Jumbotron Start-->
+<div class="jumbotron jumbotron-fluid hero">
+  <div class="container">
+      <p><small>So you want to</small></p>
+    <h1 class="display-2" style="margin-top:-30px;">Teach Yourself Korean</h1>
+    <p class="lead">So you watched Squid Games and now want to learn to speak Korean, huh? Well let’s help you get started!</p>
+  </div>
+</div>
+<!--Jumbotron End-->
+
 <!--Cards Begin-->
 <div id="sections">
   <div class="row">
